# data

./: package-lock.json  package.json
AgenticAi/: pyproject.toml  requirements.txt
AgenticAi/Agents/: multiaiagent.ipynb
AgenticAi/BasicChatBot/: BasicChatbot.ipynb
AgenticAi/Debugging/: agent.py  debugging.ipynb  langgraph.json
Authentication/OAuth/: index.js  package-lock.json  package.json
Authentication/node-express-jwt-auth-lesson-1/: app.js  package-lock.json  package.json
Authentication/node-express-jwt-auth-lesson-1/controller/: authController.js
Authentication/node-express-jwt-auth-lesson-1/middleware/: authMiddleware.js
Authentication/node-express-jwt-auth-lesson-1/models/: User.js
DurgaPuja/durga-puja-app/: App.js  app.json  package-lock.json  package.json
DurgaPuja/durga-puja-app/components/: PostCard.js  (+3 more)
GraphqL/: index.js  package-lock.json  package.json  schema.js
MCPDemoLangchain/: client.py  mathserver.py  pyproject.toml  weather.py
ReactHookForm/: package-lock.json  package.json
ReactHookForm/src/: App.tsx
Redux/ReactToolKitTodo/: package-lock.json  package.json
TodolistProject/CLientside/: package-lock.json  package.json
TodolistProject/Serverside/: package-lock.json  package.json
prisma/: index.js  package.json
prisma/prisma/: schema.prisma
src/: App.jsx  main.jsx
src/pages/: Child.jsx  ClearUp.jsx  Parent.jsx  Register.jsx  UseContext.jsx  UseEffect.jsx  UseMemoHook.jsx  UseReducer.jsx  UseRef.jsx  UseRefExample.jsx  UseStateExample.jsx  WithUseCallback.jsx  WithoutUseCallback.jsx  WithoutUseMemo.jsx  reducer.jsx
(+20 files in other folders)
